# ghostsnstuff-spiritbox-fw

./: .gitignore  README.md  app.py  pyproject.toml  test.py
ghostsnstuff-spiritbox-fw/: agents.py  state.py  utils.py
ghostsnstuff_spiritbox_fw/: agents.py  app.py  conversation.py  events.py  game.py  logging.py  prompts.py  runtime.py  scenario.py  server.py  speech.py  utils.py
ghostsnstuff_spiritbox_fw/debug/: api.py  ui.py  ui_launcher.py
ghostsnstuff_spiritbox_fw/hal/: __test.py  audio_define.py  display.py  emf.py  microphone.py  microphone.py.old  platform.py  speaker.py
ghostsnstuff_spiritbox_fw/models/: curator.py  ghost.py  state.py  user.py  writer.py
scenarios/: scenario_1.json  scenario_2.json  scenario_built.json  scenario_memories.json  scenario_nysa.json  scenario_test.json
